examples/test/testpolicy7552.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7552
  namespace: namespace404
spec:
  podSelector:
    matchLabels:
      key34: value5
      key26: value8
      key28: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value35
      podSelector:
        matchLabels:
          key26: value27
          key47: value22
          key44: value44
